--- a/src/components/navigation/navigation/navigation.scss
+++ b/src/components/navigation/navigation/navigation.scss
@@ -94,7 +94,7 @@
   }
 }
 
-:host([disable-animation]) {
+:host(:is([data-resize-disable-animation], [disable-animation])) {
   --sbb-navigation-animation-duration: 0.1ms;
 }
 
